--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -1,11 +1,10 @@
 /* global styles */
-/* global styles */
 @import 'fonts.css';
 
 * {
   font-family: 'libre-franklin', sans-serif;
   line-height: 160%;
-  color: $rich-black-fogra-29;
+  color: $black;
 }
 
 h1, h2, h3, h4 {
@@ -14,4 +13,35 @@ h1, h2, h3, h4 {
 
 h3 {
   font-size: 140%;
+}
+
+img {
+  max-width: 100%;
+  height: auto;
+}
+
+.flex-container {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+.card {
+  border: solid 1px $black;
+  border-radius: 0.4em;
+  margin: 0.4em;
+  width: 380px;
+}
+
+.card-title {
+  padding: 0 0.4em;
+  text-align: center;
+  border-bottom: solid 1px #808080;
+  h2 {
+    line-height: 50%;
+  }
+}
+
+.card-body {
+  padding: 0.4em;
 }
